--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <section class="main-section">
             <div class="col">
                 <h2 class="heading">Efficient Ruby on Rails Engineering</h2>
-                <h3 class="sub-heading">Full³ Stack Teams</h3>
                 <p>We build dedicated, multi-skilled teams that help you:</p>
                 <ul>
                     <li>Validate your hypotheses</li>
@@ -54,10 +53,10 @@
                 <h3 class="sub-heading">We Own Every Decision</h3>
                 <p>We're deliberate in our choices. For every piece of technology we adopt, we can explain why it's there; for everything we skip, we can explain why it's not.</p>
                 <ul>
+                    <li>We <strong>practice</strong>: Painless Rails, Modern Make.</li>
+                    <li>We <strong>prefer</strong>: minitest, fixtures, hotwire, kamal</li>
                     <li>We <strong>don't</strong> do: microservices, service objects, callbacks, mocks, monads, e2e browser tests.</li>
                     <li>We <strong>don't</strong> care about code coverage.</li>
-                    <li>We prefer: minitest, fixtures, hotwire, kamal,</li>
-                    <li>We practice: Painless Rails, Application Layer, Modern Make.</li>
                 </ul>
 
                 <h3 class="sub-heading">We Don't Reinvent Wheels</h3>
@@ -98,6 +97,7 @@
                     <p>Want to dive deeper into our approach? Select up to 2 guides that interest you most, and we'll send them straight to your inbox.</p>
 
                     <form id="resource-form" class="resource-form">
+                        <h4 class="form-title">Choose your Rails guides</h4>
                         <div class="checkbox-group">
                             <div class="checkbox-item">
                                 <input type="checkbox" id="guide-1" name="selected_guides" value="painless-rails-guide">
@@ -112,12 +112,12 @@
                                 <label for="guide-3">Service Layer Architecture</label>
                             </div>
                             <div class="checkbox-item">
-                                <input type="checkbox" id="guide-4" name="selected_guides" value="application-layer-architecture">
-                                <label for="guide-4">Application Layer Architecture</label>
+                                <input type="checkbox" id="guide-4" name="selected_guides" value="services-reference">
+                                <label for="guide-4">Services to Cut Build Time</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="guide-5" name="selected_guides" value="rails-application-journey">
-                                <label for="guide-5">Your Rails Application Journey</label>
+                                <label for="guide-5">Every Rails Application Journey</label>
                             </div>
                         </div>
                         <p class="selection-hint">Please select 2 guides maximum</p>
